# AsyncCommunicationHandler

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Dependencies/: CMakeLists.txt
Source/: CommunicationHandler.cpp  ZmqSocket.cpp  ipccommunicationhandler.cpp  zmqsocket.cpp
Source/include/: AbstractFifoClass.h  CommunicationHandler.h  ZmqSocket.h  ipccommunicationhandler.h  zmqsocket.h
